docker/front-envoy-dev.yaml
cluster_manager:
  outlier_detection:
    event_log_path: "/dev/stdout"

static_resources:
  listeners:
    # HTTP
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains:
                      - "*"
                    routes:
                      - match:
                          prefix: "/"
                        redirect: { https_redirect: true }
              http_filters:
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    - name: listener_https
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 60000

      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                upgrade_configs:
                - upgrade_type: websocket
                http_protocol_options:
                  accept_http_10: true
                use_remote_address: true
                common_http_protocol_options:
                  idle_timeout: 86400s # 24 hours

                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: mqtt2_handler
                      domains:
                        - "iot2.vophambaothinh.com:60000"
                        - "iot2.vophambaothinh.com"
                      routes:
                        - match:
                            prefix: "/mqtt"
                          route:
                            cluster: mqtt5_mqtts_clr
                            timeout: 0s # Disable the 15s default timeout

                      cors:
                        allow_origin_string_match:
                          - prefix: "*"
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS, PRI
                        allow_headers: keep-alive,user-agent,cache-control,content-type,authorization,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                        max_age: "1728000"
                        expose_headers: custom-header-1,grpc-status,grpc-message

                    - name: mqtt_handler
                      domains:
                        - "iot.vophambaothinh.com:60000"
                        - "iot.vophambaothinh.com"
                      routes:
                        - match:
                            prefix: "/ws"
                          route:
                            cluster: mqtt5_ws_clr
                            upgrade_configs:
                              - upgrade_type: websocket
                            timeout: 0s # Disable the 15s default timeout
                        - match:
                            prefix: "/mqtt"
                          route:
                            cluster: mqtt5_mqtt_clr
                            timeout: 0s # Disable the 15s default timeout

                      cors:
                        allow_origin_string_match:
                          - prefix: "*"
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS, PRI
                        allow_headers: keep-alive,user-agent,cache-control,content-type,authorization,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                        max_age: "1728000"
                        expose_headers: custom-header-1,grpc-status,grpc-message

                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                - certificate_chain:
                    filename: "/etc/envoy/ssl/vpbt-server_2025.crt" # server certificate
                  private_key:
                    filename: "/etc/envoy/ssl/vpbt-server_2025.key" # server key
                validation_context:
                  trusted_ca:
                    filename: "/etc/envoy/ssl/vpbt-ca_2025.crt" 
              require_client_certificate: true

  clusters:

    - name: mqtt5_mqtts_clr
      connect_timeout: 0.25s
      per_connection_buffer_limit_bytes: 32768 # 32 KiB
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: mqtt5_mqtts_clr
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: mqtt-wrapper-service
                      port_value: 8883

    - name: mqtt5_mqtt_clr
      connect_timeout: 0.25s
      per_connection_buffer_limit_bytes: 32768 # 32 KiB
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: mqtt5_mqtt_clr
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: mqtt-wrapper-service
                      port_value: 1883

    - name: mqtt5_ws_clr
      connect_timeout: 0.25s
      per_connection_buffer_limit_bytes: 32768 # 32 KiB
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: mqtt5_ws_clr
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: mqtt-wrapper-service
                      port_value: 8083
